--- a/MediaBrowser.Server.Implementations/Localization/Core/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/nl.json
@@ -37,17 +37,17 @@
     "NotificationOptionPluginInstalled": "Plug-in ge\u00efnstalleerd",
     "NotificationOptionPluginUninstalled": "Plug-in verwijderd",
     "NotificationOptionVideoPlayback": "Video afspelen gestart",
-    "NotificationOptionAudioPlayback": "Audio afspelen gestart",
+    "NotificationOptionAudioPlayback": "Geluid afspelen gestart",
     "NotificationOptionGamePlayback": "Game gestart",
     "NotificationOptionVideoPlaybackStopped": "Video afspelen gestopt",
-    "NotificationOptionAudioPlaybackStopped": "Audio afspelen gestopt",
+    "NotificationOptionAudioPlaybackStopped": "Geluid afspelen gestopt",
     "NotificationOptionGamePlaybackStopped": "Afspelen spel gestopt",
     "NotificationOptionTaskFailed": "Mislukken van de geplande taak",
     "NotificationOptionInstallationFailed": "Mislukken van de installatie",
     "NotificationOptionNewLibraryContent": "Nieuwe content toegevoegd",
     "NotificationOptionNewLibraryContentMultiple": "Nieuwe content toegevoegd (meerdere)",
     "NotificationOptionCameraImageUploaded": "Camera afbeelding ge\u00fcpload",
-    "NotificationOptionUserLockedOut": "Gebruiker uitgesloten",
+    "NotificationOptionUserLockedOut": "Gebruikersaccount vergrendeld",
     "NotificationOptionServerRestartRequired": "Server herstart nodig",
     "ViewTypePlaylists": "Afspeellijsten",
     "ViewTypeMovies": "Films",
@@ -115,45 +115,45 @@
     "FailedLoginAttemptWithUserName": "Mislukte aanmeld poging van {0}",
     "AuthenticationSucceededWithUserName": "{0} is succesvol geverifieerd",
     "DeviceOfflineWithName": "{0} is losgekoppeld",
-    "UserLockedOutWithName": "Gebruiker {0} is uitgesloten",
+    "UserLockedOutWithName": "Gebruikersaccount {0} is vergrendeld",
     "UserOfflineFromDevice": "Verbinding van {0} met {1} is verbroken",
     "UserStartedPlayingItemWithValues": "{0} heeft afspelen van {1} gestart",
     "UserStoppedPlayingItemWithValues": "{0} heeft afspelen van {1} gestopt",
     "SubtitleDownloadFailureForItem": "Downloaden van ondertiteling voor {0} is mislukt",
-    "HeaderUnidentified": "Unidentified",
-    "HeaderImagePrimary": "Primary",
-    "HeaderImageBackdrop": "Backdrop",
+    "HeaderUnidentified": "One\u00efdentificaard",
+    "HeaderImagePrimary": "Primair",
+    "HeaderImageBackdrop": "Achtergrond",
     "HeaderImageLogo": "Logo",
-    "HeaderUserPrimaryImage": "User Image",
-    "HeaderOverview": "Overview",
-    "HeaderShortOverview": "Short Overview",
+    "HeaderUserPrimaryImage": "Afbeelding gebruiker",
+    "HeaderOverview": "Overzicht",
+    "HeaderShortOverview": "Kort overzicht",
     "HeaderType": "Type",
-    "HeaderSeverity": "Severity",
+    "HeaderSeverity": "Ernst",
     "HeaderUser": "Gebruiker",
     "HeaderName": "Naam",
     "HeaderDate": "Datum",
-    "HeaderPremiereDate": "Premiere Date",
-    "HeaderDateAdded": "Date Added",
+    "HeaderPremiereDate": "Premi\u00e8re Datum",
+    "HeaderDateAdded": "Datum toegevoegd",
     "HeaderReleaseDate": "Uitgave datum",
     "HeaderRuntime": "Speelduur",
-    "HeaderPlayCount": "Play Count",
+    "HeaderPlayCount": "Afspeel telling",
     "HeaderSeason": "Seizoen",
     "HeaderSeasonNumber": "Seizoen nummer",
     "HeaderSeries": "Series:",
     "HeaderNetwork": "Zender",
-    "HeaderYear": "Year:",
-    "HeaderYears": "Years:",
-    "HeaderParentalRating": "Parental Rating",
+    "HeaderYear": "Jaar:",
+    "HeaderYears": "Jaren:",
+    "HeaderParentalRating": "Kijkwijzer classificatie",
     "HeaderCommunityRating": "Gemeenschap cijfer",
     "HeaderTrailers": "Trailers",
     "HeaderSpecials": "Specials",
-    "HeaderGameSystems": "Game Systems",
-    "HeaderPlayers": "Players:",
-    "HeaderAlbumArtists": "Album Artists",
+    "HeaderGameSystems": "Spel systemen",
+    "HeaderPlayers": "Spelers:",
+    "HeaderAlbumArtists": "Album artiesten",
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Schijf",
     "HeaderTrack": "Track",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "Geluid",
     "HeaderVideo": "Video",
     "HeaderEmbeddedImage": "Ingesloten afbeelding",
     "HeaderResolution": "Resolutie",
@@ -162,15 +162,15 @@
     "HeaderCountries": "Landen",
     "HeaderStatus": "Status",
     "HeaderTracks": "Tracks",
-    "HeaderMusicArtist": "Music artist",
-    "HeaderLocked": "Locked",
+    "HeaderMusicArtist": "Muziek artiest",
+    "HeaderLocked": "Vergrendeld",
     "HeaderStudios": "Studio's",
-    "HeaderActor": "Actors",
-    "HeaderComposer": "Composers",
-    "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
-    "HeaderProducer": "Producers",
-    "HeaderWriter": "Writers",
+    "HeaderActor": "Acteurs",
+    "HeaderComposer": "Componisten",
+    "HeaderDirector": "Regiseurs",
+    "HeaderGuestStar": "Gast ster",
+    "HeaderProducer": "Producenten",
+    "HeaderWriter": "Schrijvers",
     "HeaderParentalRatings": "Ouderlijke toezicht",
-    "HeaderCommunityRatings": "Community ratings"
+    "HeaderCommunityRatings": "Gemeenschapswaardering"
 }
