--- a/MediaBrowser.Server.Implementations/Localization/Core/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/kk.json
@@ -128,7 +128,7 @@
     "HeaderOverview": "\u0416\u0430\u043b\u043f\u044b \u0448\u043e\u043b\u0443",
     "HeaderShortOverview": "\u049a\u044b\u0441\u049b\u0430\u0448\u0430 \u0448\u043e\u043b\u0443",
     "HeaderType": "\u0422\u04af\u0440\u0456",
-    "HeaderSeverity": "\u0410\u0443\u044b\u0440\u043b\u044b\u0493\u044b",
+    "HeaderSeverity": "\u049a\u0438\u044b\u043d\u0434\u044b\u0493\u044b",
     "HeaderUser": "\u041f\u0430\u0439\u0434\u0430\u043b\u0430\u043d\u0443\u0448\u044b",
     "HeaderName": "\u0410\u0442\u044b",
     "HeaderDate": "\u041a\u04af\u043d\u0456",
