--- a/MediaBrowser.Server.Implementations/Localization/Core/ru.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ru.json
@@ -83,11 +83,11 @@
     "ViewTypeMusicAlbums": "\u0410\u043b\u044c\u0431\u043e\u043c\u044b",
     "ViewTypeMusicAlbumArtists": "\u0410\u043b\u044c\u0431\u043e\u043c\u043d\u044b\u0435 \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u0438",
     "HeaderOtherDisplaySettings": "\u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u043e\u0442\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f",
-    "ViewTypeMusicSongs": "\u041c\u0435\u043b\u043e\u0434\u0438\u0438",
+    "ViewTypeMusicSongs": "\u041a\u043e\u043c\u043f\u043e\u0437\u0438\u0446\u0438\u0438",
     "ViewTypeMusicFavorites": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u043e\u0435",
     "ViewTypeMusicFavoriteAlbums": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0430\u043b\u044c\u0431\u043e\u043c\u044b",
     "ViewTypeMusicFavoriteArtists": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u0438",
-    "ViewTypeMusicFavoriteSongs": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u043c\u0435\u043b\u043e\u0434\u0438\u0438",
+    "ViewTypeMusicFavoriteSongs": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u044b\u0435 \u043a\u043e\u043c\u043f\u043e\u0437\u0438\u0446\u0438\u0438",
     "ViewTypeFolders": "\u041f\u0430\u043f\u043a\u0438",
     "ViewTypeLiveTvRecordingGroups": "\u0417\u0430\u043f\u0438\u0441\u0438",
     "ViewTypeLiveTvChannels": "\u041a\u0430\u043d\u0430\u043b\u044b",
@@ -125,10 +125,10 @@
     "HeaderImageBackdrop": "\u0417\u0430\u0434\u043d\u0438\u043a",
     "HeaderImageLogo": "\u041b\u043e\u0433\u043e\u0442\u0438\u043f",
     "HeaderUserPrimaryImage": "\u0420\u0438\u0441\u0443\u043d\u043e\u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044f",
-    "HeaderOverview": "\u041e\u0431\u0437\u043e\u0440",
-    "HeaderShortOverview": "\u041a\u0440\u0430\u0442\u043a\u0438\u0439 \u043e\u0431\u0437\u043e\u0440",
+    "HeaderOverview": "\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435",
+    "HeaderShortOverview": "\u041a\u0440\u0430\u0442\u043a\u043e\u0435 \u043e\u043f\u0438\u0441\u0430\u043d\u0438\u0435",
     "HeaderType": "\u0422\u0438\u043f",
-    "HeaderSeverity": "\u0421\u0442\u0440\u043e\u0433\u043e\u0441\u0442\u044c",
+    "HeaderSeverity": "\u0412\u0430\u0436\u043d\u043e\u0441\u0442\u044c",
     "HeaderUser": "\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c",
     "HeaderName": "\u0418\u043c\u044f (\u043d\u0430\u0437\u0432\u0430\u043d\u0438\u0435)",
     "HeaderDate": "\u0414\u0430\u0442\u0430",
@@ -136,7 +136,7 @@
     "HeaderDateAdded": "\u0414\u0430\u0442\u0430 \u0434\u043e\u0431-\u0438\u044f",
     "HeaderReleaseDate": "\u0414\u0430\u0442\u0430 \u0432\u044b\u043f.",
     "HeaderRuntime": "\u0414\u043b\u0438\u0442.",
-    "HeaderPlayCount": "\u041a\u043e\u043b-\u0432\u043e \u0432\u043e\u0441\u043f\u0440-\u0438\u0439",
+    "HeaderPlayCount": "\u0427\u0438\u0441\u043b\u043e \u0432\u043e\u0441\u043f\u0440-\u0438\u0439",
     "HeaderSeason": "\u0421\u0435\u0437\u043e\u043d",
     "HeaderSeasonNumber": "\u041d\u043e\u043c\u0435\u0440 \u0441\u0435\u0437\u043e\u043d\u0430",
     "HeaderSeries": "\u0421\u0435\u0440\u0438\u0430\u043b:",
