rework subtitle editor

--- a/MediaBrowser.Server.Implementations/Localization/Core/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/de.json
@@ -173,5 +173,5 @@
     "HeaderWriter": "Autoren",
     "HeaderParentalRatings": "Altersbeschr\u00e4nkung",
     "HeaderCommunityRatings": "Community Bewertungen",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "StartupEmbyServerIsLoading": "Emby Server startet, bitte versuchen Sie es gleich noch einmal."
 }
