--- a/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/es-MX.json
@@ -173,5 +173,5 @@
     "HeaderWriter": "Guionistas",
     "HeaderParentalRatings": "Clasificaci\u00f3n Parental",
     "HeaderCommunityRatings": "Clasificaciones de la comunidad",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "StartupEmbyServerIsLoading": "El servidor Emby esta cargando. Por favor intente de nuevo dentro de poco."
 }
