--- a/MediaBrowser.Server.Implementations/Localization/Core/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/nl.json
@@ -173,5 +173,5 @@
     "HeaderWriter": "Schrijvers",
     "HeaderParentalRatings": "Ouderlijke toezicht",
     "HeaderCommunityRatings": "Gemeenschapswaardering",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "StartupEmbyServerIsLoading": "Emby Server is aan het laden, probeer het later opnieuw."
 }
