--- a/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/pt-BR.json
@@ -173,5 +173,5 @@
     "HeaderWriter": "Escritores",
     "HeaderParentalRatings": "Classifica\u00e7\u00f5es Parentais",
     "HeaderCommunityRatings": "Avalia\u00e7\u00f5es da comunidade",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "StartupEmbyServerIsLoading": "O Servidor Emby est\u00e1 carregando. Por favor, tente novamente em breve."
 }
