--- a/MediaBrowser.Server.Implementations/Localization/Core/zh-HK.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/zh-HK.json
@@ -1,16 +1,16 @@
 {
     "AppDeviceValues": "App: {0}, Device: {1}",
     "UserDownloadingItemWithValues": "{0} is downloading {1}",
-    "FolderTypeMixed": "Mixed content",
-    "FolderTypeMovies": "Movies",
-    "FolderTypeMusic": "Music",
-    "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
-    "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
-    "FolderTypeGames": "Games",
-    "FolderTypeBooks": "Books",
-    "FolderTypeTvShows": "TV",
+    "FolderTypeMixed": "\u6df7\u5408\u5167\u5bb9",
+    "FolderTypeMovies": "\u96fb\u5f71",
+    "FolderTypeMusic": "\u97f3\u6a02",
+    "FolderTypeAdultVideos": "\u6210\u4eba\u5f71\u7247",
+    "FolderTypePhotos": "\u76f8\u7247",
+    "FolderTypeMusicVideos": "\u97f3\u6a02\u5f71\u7247",
+    "FolderTypeHomeVideos": "\u9996\u9801\u5f71\u7247",
+    "FolderTypeGames": "\u904a\u6232",
+    "FolderTypeBooks": "\u66f8\u85c9",
+    "FolderTypeTvShows": "\u96fb\u8996\u7bc0\u76ee",
     "FolderTypeInherit": "\u7e7c\u627f",
     "HeaderCastCrew": "\u6f14\u54e1\u9663\u5bb9",
     "HeaderPeople": "People",
@@ -130,7 +130,7 @@
     "HeaderType": "Type",
     "HeaderSeverity": "Severity",
     "HeaderUser": "User",
-    "HeaderName": "Name",
+    "HeaderName": "\u540d\u7a31",
     "HeaderDate": "\u65e5\u671f",
     "HeaderPremiereDate": "Premiere Date",
     "HeaderDateAdded": "Date Added",
@@ -153,8 +153,8 @@
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Disc",
     "HeaderTrack": "Track",
-    "HeaderAudio": "Audio",
-    "HeaderVideo": "Video",
+    "HeaderAudio": "\u97f3\u8a0a",
+    "HeaderVideo": "\u5f71\u7247",
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderResolution": "Resolution",
     "HeaderSubtitles": "Subtitles",
