--- a/MediaBrowser.Server.Implementations/Localization/Core/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/fr.json
@@ -173,5 +173,5 @@
     "HeaderWriter": "Auteur(e)s",
     "HeaderParentalRatings": "Note parentale",
     "HeaderCommunityRatings": "Classification de la communaut\u00e9",
-    "StartupEmbyServerIsLoading": "Emby Server is loading. Please try again shortly."
+    "StartupEmbyServerIsLoading": "Le serveur Emby est en cours de chargement. Veuillez r\u00e9essayer dans quelques instant."
 }
