--- a/MediaBrowser.Server.Implementations/Localization/Core/ru.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ru.json
@@ -6,8 +6,8 @@
     "FolderTypeMusic": "\u041c\u0443\u0437\u044b\u043a\u0430",
     "FolderTypeAdultVideos": "\u0412\u0437\u0440\u043e\u0441\u043b\u044b\u0435 \u0432\u0438\u0434\u0435\u043e",
     "FolderTypePhotos": "\u0424\u043e\u0442\u043e\u0433\u0440\u0430\u0444\u0438\u0438",
-    "FolderTypeMusicVideos": "\u041c\u0443\u0437\u044b\u043a\u0430\u043b\u044c\u043d\u044b\u0435 \u0432\u0438\u0434\u0435\u043e",
-    "FolderTypeHomeVideos": "\u0414\u043e\u043c\u0430\u0448\u043d\u0438\u0435 \u0432\u0438\u0434\u0435\u043e",
+    "FolderTypeMusicVideos": "\u041c\u0443\u0437-\u044b\u0435 \u0432\u0438\u0434\u0435\u043e",
+    "FolderTypeHomeVideos": "\u0414\u043e\u043c-\u0438\u0435 \u0432\u0438\u0434\u0435\u043e",
     "FolderTypeGames": "\u0418\u0433\u0440\u044b",
     "FolderTypeBooks": "\u041a\u043d\u0438\u0433\u0438",
     "FolderTypeTvShows": "\u0422\u0412",
@@ -81,7 +81,7 @@
     "ViewTypeMusicLatest": "\u041f\u043e\u0441\u043b\u0435\u0434\u043d\u0435\u0435",
     "ViewTypeMusicPlaylists": "\u041f\u043b\u0435\u0439-\u043b\u0438\u0441\u0442\u044b",
     "ViewTypeMusicAlbums": "\u0410\u043b\u044c\u0431\u043e\u043c\u044b",
-    "ViewTypeMusicAlbumArtists": "\u0418\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u0438 \u0430\u043b\u044c\u0431\u043e\u043c\u0430",
+    "ViewTypeMusicAlbumArtists": "\u0418\u0441\u043f-\u043b\u0438 \u0430\u043b\u044c\u0431\u043e\u043c\u0430",
     "HeaderOtherDisplaySettings": "\u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u043e\u0442\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f",
     "ViewTypeMusicSongs": "\u041a\u043e\u043c\u043f\u043e\u0437\u0438\u0446\u0438\u0438",
     "ViewTypeMusicFavorites": "\u0418\u0437\u0431\u0440\u0430\u043d\u043d\u043e\u0435",
@@ -162,7 +162,7 @@
     "HeaderCountries": "\u0421\u0442\u0440\u0430\u043d\u044b",
     "HeaderStatus": "\u0421\u043e\u0441\u0442-\u0438\u0435",
     "HeaderTracks": "\u0414\u043e\u0440-\u043a\u0438",
-    "HeaderMusicArtist": "\u041c\u0443\u0437. \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c",
+    "HeaderMusicArtist": "\u0418\u0441\u043f. \u043c\u0443\u0437\u044b\u043a\u0438",
     "HeaderLocked": "\u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u043e",
     "HeaderStudios": "\u0421\u0442\u0443\u0434\u0438\u0438",
     "HeaderActor": "\u0410\u043a\u0442\u0451\u0440\u044b",
