--- a/MediaBrowser.Server.Implementations/Localization/Core/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/de.json
@@ -25,7 +25,7 @@
     "LabelBrowseLibrary": "Bibliothek durchsuchen",
     "LabelConfigureServer": "Konfiguriere Emby",
     "LabelRestartServer": "Server neustarten",
-    "CategorySync": "Synchronisieren",
+    "CategorySync": "Sync",
     "CategoryUser": "Benutzer",
     "CategorySystem": "System",
     "CategoryApplication": "Anwendung",
