--- a/MediaBrowser.Server.Implementations/Localization/Core/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/fr.json
@@ -20,7 +20,7 @@
     "LabelExit": "Quitter",
     "LabelVisitCommunity": "Visiter la Communaut\u00e9",
     "LabelGithub": "Github",
-    "LabelApiDocumentation": "Documentation API",
+    "LabelApiDocumentation": "Documentation de l'API",
     "LabelDeveloperResources": "Ressources pour d\u00e9veloppeurs",
     "LabelBrowseLibrary": "Parcourir la biblioth\u00e8que",
     "LabelConfigureServer": "Configurer Emby",
