--- a/MediaBrowser.Server.Implementations/Localization/Core/zh-HK.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/zh-HK.json
@@ -6,17 +6,17 @@
     "FolderTypeMusic": "\u97f3\u6a02",
     "FolderTypeAdultVideos": "\u6210\u4eba\u5f71\u7247",
     "FolderTypePhotos": "\u76f8\u7247",
-    "FolderTypeMusicVideos": "\u97f3\u6a02\u5f71\u7247",
-    "FolderTypeHomeVideos": "\u9996\u9801\u5f71\u7247",
+    "FolderTypeMusicVideos": "MV",
+    "FolderTypeHomeVideos": "\u500b\u4eba\u5f71\u7247",
     "FolderTypeGames": "\u904a\u6232",
     "FolderTypeBooks": "\u66f8\u85c9",
     "FolderTypeTvShows": "\u96fb\u8996\u7bc0\u76ee",
     "FolderTypeInherit": "\u7e7c\u627f",
     "HeaderCastCrew": "\u6f14\u54e1\u9663\u5bb9",
-    "HeaderPeople": "People",
+    "HeaderPeople": "\u4eba\u7269",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelChapterName": "Chapter {0}",
-    "NameSeasonNumber": "Season {0}",
+    "NameSeasonNumber": "\u5287\u96c6\u5b63\u5ea6 {0}",
     "LabelExit": "\u96e2\u958b",
     "LabelVisitCommunity": "\u8a2a\u554f\u8a0e\u8ad6\u5340",
     "LabelGithub": "Github",
@@ -24,7 +24,7 @@
     "LabelDeveloperResources": "\u958b\u767c\u8005\u8cc7\u6e90",
     "LabelBrowseLibrary": "\u700f\u89bd\u8cc7\u6599\u5eab",
     "LabelConfigureServer": "\u8a2d\u7f6e Emby",
-    "LabelRestartServer": "\u91cd\u555f\u4f3a\u670d\u5668",
+    "LabelRestartServer": "\u91cd\u65b0\u555f\u52d5\u4f3a\u670d\u5668",
     "CategorySync": "\u540c\u6b65",
     "CategoryUser": "User",
     "CategorySystem": "System",
@@ -48,34 +48,34 @@
     "NotificationOptionNewLibraryContentMultiple": "New content added (multiple)",
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
-    "NotificationOptionServerRestartRequired": "Server restart required",
+    "NotificationOptionServerRestartRequired": "\u9700\u8981\u91cd\u65b0\u555f\u52d5",
     "ViewTypePlaylists": "Playlists",
     "ViewTypeMovies": "Movies",
     "ViewTypeTvShows": "TV",
-    "ViewTypeGames": "Games",
+    "ViewTypeGames": "\u904a\u6232",
     "ViewTypeMusic": "Music",
     "ViewTypeMusicGenres": "Genres",
     "ViewTypeMusicArtists": "Artists",
-    "ViewTypeBoxSets": "Collections",
+    "ViewTypeBoxSets": "\u85cf\u54c1",
     "ViewTypeChannels": "Channels",
     "ViewTypeLiveTV": "Live TV",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
-    "ViewTypeLatestGames": "Latest Games",
-    "ViewTypeRecentlyPlayedGames": "Recently Played",
+    "ViewTypeLatestGames": "\u6700\u8fd1\u904a\u6232",
+    "ViewTypeRecentlyPlayedGames": "\u6700\u8fd1\u64ad\u653e",
     "ViewTypeGameFavorites": "Favorites",
-    "ViewTypeGameSystems": "Game Systems",
+    "ViewTypeGameSystems": "\u904a\u6232\u7cfb\u7d71",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
     "ViewTypeTvNextUp": "Next Up",
     "ViewTypeTvLatest": "Latest",
-    "ViewTypeTvShowSeries": "Series",
+    "ViewTypeTvShowSeries": "\u96fb\u8996\u5287",
     "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favorite Series",
-    "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
+    "ViewTypeTvFavoriteSeries": "\u6211\u7684\u6700\u611b\u96fb\u8996\u5287",
+    "ViewTypeTvFavoriteEpisodes": "\u6211\u7684\u6700\u611b\u5287\u96c6",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
     "ViewTypeMovieMovies": "Movies",
-    "ViewTypeMovieCollections": "Collections",
+    "ViewTypeMovieCollections": "\u85cf\u54c1",
     "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
@@ -83,11 +83,11 @@
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
     "HeaderOtherDisplaySettings": "Display Settings",
-    "ViewTypeMusicSongs": "Songs",
+    "ViewTypeMusicSongs": "\u6b4c\u66f2",
     "ViewTypeMusicFavorites": "Favorites",
     "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
     "ViewTypeMusicFavoriteArtists": "Favorite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
+    "ViewTypeMusicFavoriteSongs": "\u6211\u7684\u6700\u611b\u6b4c\u66f2",
     "ViewTypeFolders": "Folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
@@ -104,7 +104,7 @@
     "DeviceOnlineWithName": "{0} is connected",
     "UserOnlineFromDevice": "{0} is online from {1}",
     "ProviderValue": "Provider: {0}",
-    "SubtitlesDownloadedForItem": "Subtitles downloaded for {0}",
+    "SubtitlesDownloadedForItem": "\u5df2\u7d93\u70ba {0} \u4e0b\u8f09\u4e86\u5b57\u5e55",
     "UserConfigurationUpdatedWithName": "User configuration has been updated for {0}",
     "UserCreatedWithName": "User {0} has been created",
     "UserPasswordChangedWithName": "Password has been changed for user {0}",
@@ -119,7 +119,7 @@
     "UserOfflineFromDevice": "{0} has disconnected from {1}",
     "UserStartedPlayingItemWithValues": "{0} has started playing {1}",
     "UserStoppedPlayingItemWithValues": "{0} has stopped playing {1}",
-    "SubtitleDownloadFailureForItem": "Subtitles failed to download for {0}",
+    "SubtitleDownloadFailureForItem": "\u70ba {0} \u4e0b\u8f09\u5b57\u5e55\u5931\u6557",
     "HeaderUnidentified": "Unidentified",
     "HeaderImagePrimary": "Primary",
     "HeaderImageBackdrop": "Backdrop",
@@ -137,9 +137,9 @@
     "HeaderReleaseDate": "Release date",
     "HeaderRuntime": "Runtime",
     "HeaderPlayCount": "Play Count",
-    "HeaderSeason": "Season",
-    "HeaderSeasonNumber": "Season number",
-    "HeaderSeries": "Series:",
+    "HeaderSeason": "\u5287\u96c6\u5b63\u5ea6",
+    "HeaderSeasonNumber": "\u5287\u96c6\u5b63\u5ea6\u6578\u76ee",
+    "HeaderSeries": "\u96fb\u8996\u5287\uff1a",
     "HeaderNetwork": "Network",
     "HeaderYear": "Year:",
     "HeaderYears": "Years:",
@@ -147,7 +147,7 @@
     "HeaderCommunityRating": "Community rating",
     "HeaderTrailers": "Trailers",
     "HeaderSpecials": "Specials",
-    "HeaderGameSystems": "Game Systems",
+    "HeaderGameSystems": "\u904a\u6232\u7cfb\u7d71",
     "HeaderPlayers": "Players:",
     "HeaderAlbumArtists": "Album Artists",
     "HeaderAlbums": "Albums",
@@ -157,18 +157,18 @@
     "HeaderVideo": "\u5f71\u7247",
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderResolution": "Resolution",
-    "HeaderSubtitles": "Subtitles",
+    "HeaderSubtitles": "\u5b57\u5e55",
     "HeaderGenres": "Genres",
     "HeaderCountries": "Countries",
     "HeaderStatus": "\u72c0\u614b",
     "HeaderTracks": "Tracks",
-    "HeaderMusicArtist": "Music artist",
+    "HeaderMusicArtist": "\u6b4c\u624b",
     "HeaderLocked": "Locked",
     "HeaderStudios": "Studios",
     "HeaderActor": "Actors",
     "HeaderComposer": "Composers",
     "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
+    "HeaderGuestStar": "\u7279\u7d04\u660e\u661f",
     "HeaderProducer": "Producers",
     "HeaderWriter": "Writers",
     "HeaderParentalRatings": "Parental Ratings",
