--- a/MediaBrowser.Server.Implementations/Localization/Core/ca.json
+++ b/MediaBrowser.Server.Implementations/Localization/Core/ca.json
@@ -5,25 +5,25 @@
     "FolderTypeMovies": "Movies",
     "FolderTypeMusic": "Music",
     "FolderTypeAdultVideos": "Adult videos",
-    "FolderTypePhotos": "Photos",
+    "FolderTypePhotos": "Fotos",
     "FolderTypeMusicVideos": "Music videos",
-    "FolderTypeHomeVideos": "Home videos",
+    "FolderTypeHomeVideos": "V\u00eddeos dom\u00e8stics",
     "FolderTypeGames": "Games",
     "FolderTypeBooks": "Books",
     "FolderTypeTvShows": "TV",
-    "FolderTypeInherit": "Inherit",
+    "FolderTypeInherit": "Heretat",
     "HeaderCastCrew": "Cast & Crew",
     "HeaderPeople": "People",
     "ValueSpecialEpisodeName": "Special - {0}",
     "LabelChapterName": "Chapter {0}",
-    "NameSeasonNumber": "Season {0}",
+    "NameSeasonNumber": "Temporada {0}",
     "LabelExit": "Sortir",
-    "LabelVisitCommunity": "Visitar la comunitat",
+    "LabelVisitCommunity": "Visita la comunitat",
     "LabelGithub": "Github",
-    "LabelApiDocumentation": "Api Documentation",
-    "LabelDeveloperResources": "Developer Resources",
-    "LabelBrowseLibrary": "Examinar la biblioteca",
-    "LabelConfigureServer": "Configure Emby",
+    "LabelApiDocumentation": "Documentaci\u00f3 de l'API",
+    "LabelDeveloperResources": "Recursos per a programadors",
+    "LabelBrowseLibrary": "Examina la biblioteca",
+    "LabelConfigureServer": "Configura Emby",
     "LabelRestartServer": "Reiniciar el servidor",
     "CategorySync": "Sync",
     "CategoryUser": "User",
@@ -49,52 +49,52 @@
     "NotificationOptionCameraImageUploaded": "Camera image uploaded",
     "NotificationOptionUserLockedOut": "User locked out",
     "NotificationOptionServerRestartRequired": "Server restart required",
-    "ViewTypePlaylists": "Playlists",
+    "ViewTypePlaylists": "Llistes de reproducci\u00f3",
     "ViewTypeMovies": "Movies",
     "ViewTypeTvShows": "TV",
     "ViewTypeGames": "Games",
     "ViewTypeMusic": "Music",
     "ViewTypeMusicGenres": "Genres",
     "ViewTypeMusicArtists": "Artists",
-    "ViewTypeBoxSets": "Collections",
+    "ViewTypeBoxSets": "Col\u00b7leccions",
     "ViewTypeChannels": "Channels",
-    "ViewTypeLiveTV": "Live TV",
+    "ViewTypeLiveTV": "TV en Directe",
     "ViewTypeLiveTvNowPlaying": "Now Airing",
     "ViewTypeLatestGames": "Latest Games",
-    "ViewTypeRecentlyPlayedGames": "Recently Played",
-    "ViewTypeGameFavorites": "Favorites",
+    "ViewTypeRecentlyPlayedGames": "Reprodu\u00eft Recentment",
+    "ViewTypeGameFavorites": "Preferits",
     "ViewTypeGameSystems": "Game Systems",
     "ViewTypeGameGenres": "Genres",
     "ViewTypeTvResume": "Resume",
-    "ViewTypeTvNextUp": "Next Up",
+    "ViewTypeTvNextUp": "A Continuaci\u00f3",
     "ViewTypeTvLatest": "Latest",
     "ViewTypeTvShowSeries": "Series",
     "ViewTypeTvGenres": "Genres",
-    "ViewTypeTvFavoriteSeries": "Favorite Series",
+    "ViewTypeTvFavoriteSeries": "S\u00e8ries Preferides",
     "ViewTypeTvFavoriteEpisodes": "Favorite Episodes",
     "ViewTypeMovieResume": "Resume",
     "ViewTypeMovieLatest": "Latest",
     "ViewTypeMovieMovies": "Movies",
-    "ViewTypeMovieCollections": "Collections",
+    "ViewTypeMovieCollections": "Col\u00b7leccions",
     "ViewTypeMovieFavorites": "Favorites",
     "ViewTypeMovieGenres": "Genres",
     "ViewTypeMusicLatest": "Latest",
-    "ViewTypeMusicPlaylists": "Playlists",
+    "ViewTypeMusicPlaylists": "Llistes de reproducci\u00f3",
     "ViewTypeMusicAlbums": "Albums",
     "ViewTypeMusicAlbumArtists": "Album Artists",
-    "HeaderOtherDisplaySettings": "Display Settings",
+    "HeaderOtherDisplaySettings": "Prefer\u00e8ncies de Visualitzaci\u00f3",
     "ViewTypeMusicSongs": "Songs",
-    "ViewTypeMusicFavorites": "Favorites",
+    "ViewTypeMusicFavorites": "Preferits",
     "ViewTypeMusicFavoriteAlbums": "Favorite Albums",
     "ViewTypeMusicFavoriteArtists": "Favorite Artists",
-    "ViewTypeMusicFavoriteSongs": "Favorite Songs",
+    "ViewTypeMusicFavoriteSongs": "Can\u00e7ons Preferides",
     "ViewTypeFolders": "Folders",
     "ViewTypeLiveTvRecordingGroups": "Recordings",
     "ViewTypeLiveTvChannels": "Channels",
     "ScheduledTaskFailedWithName": "{0} failed",
     "LabelRunningTimeValue": "Running time: {0}",
     "ScheduledTaskStartedWithName": "{0} started",
-    "VersionNumber": "Version {0}",
+    "VersionNumber": "Versi\u00f3 {0}",
     "PluginInstalledWithName": "{0} was installed",
     "PluginUpdatedWithName": "{0} was updated",
     "PluginUninstalledWithName": "{0} was uninstalled",
@@ -137,7 +137,7 @@
     "HeaderReleaseDate": "Release date",
     "HeaderRuntime": "Runtime",
     "HeaderPlayCount": "Play Count",
-    "HeaderSeason": "Season",
+    "HeaderSeason": "Temporada",
     "HeaderSeasonNumber": "Season number",
     "HeaderSeries": "Series:",
     "HeaderNetwork": "Network",
@@ -153,14 +153,14 @@
     "HeaderAlbums": "Albums",
     "HeaderDisc": "Disc",
     "HeaderTrack": "Track",
-    "HeaderAudio": "Audio",
+    "HeaderAudio": "\u00c0udio",
     "HeaderVideo": "Video",
     "HeaderEmbeddedImage": "Embedded image",
     "HeaderResolution": "Resolution",
     "HeaderSubtitles": "Subtitles",
     "HeaderGenres": "Genres",
     "HeaderCountries": "Countries",
-    "HeaderStatus": "Status",
+    "HeaderStatus": "Estat",
     "HeaderTracks": "Tracks",
     "HeaderMusicArtist": "Music artist",
     "HeaderLocked": "Locked",
@@ -168,7 +168,7 @@
     "HeaderActor": "Actors",
     "HeaderComposer": "Composers",
     "HeaderDirector": "Directors",
-    "HeaderGuestStar": "Guest star",
+    "HeaderGuestStar": "Artista convidat",
     "HeaderProducer": "Producers",
     "HeaderWriter": "Writers",
     "HeaderParentalRatings": "Parental Ratings",
